--- a/app/build.gradle
+++ b/app/build.gradle
@@ -66,5 +66,6 @@ dependencies {
     implementation 'com.github.denzcoskun:ImageSlideshow:0.1.0'
     implementation 'com.github.smarteist:autoimageslider:1.4.0'
     implementation 'com.github.dhaval2404:imagepicker:2.1'
+    implementation 'com.intuit.sdp:sdp-android:1.0.6'
 
 }
