--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.hotel" >
+    package="com.example.hotel">
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
@@ -12,7 +12,10 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/splashScreenTheme" >
+        android:theme="@style/splashScreenTheme">
+        <activity
+            android:name=".ExpandCityActivity"
+            android:exported="false" />
         <activity
             android:name=".BookingConfirmedActivity"
             android:exported="false" />
@@ -21,6 +24,9 @@
             android:exported="false" />
         <activity
             android:name=".MyBookingsActivity"
+            android:exported="false" />
+        <activity
+            android:name=".OrdersTabActivity"
             android:exported="false" />
         <activity
             android:name="com.example.Adapter.EditRoomsActivity"
@@ -54,7 +60,7 @@
         <activity
             android:name=".MainActivity"
             android:exported="true"
-            android:windowSoftInputMode="adjustResize" >
+            android:windowSoftInputMode="adjustResize">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -67,7 +73,7 @@
             android:label="@string/app_name" />
         <activity
             android:name="com.facebook.CustomTabActivity"
-            android:exported="true" >
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.VIEW" />
 
